@@ -17,39 +17,38 @@ public class JmhRunner {
     private static final int QUICK_WARMUP_ITERATIONS = 5;
     private static final int QUICK_MEASUREMENT_ITERATIONS = 10;
 
-    public static void run(Class clazz) {
-        runAndReport(clazz, WARMUP_ITERATIONS, MEASUREMENT_ITERATIONS, Assertions.Disable);
+    public static void run(Class benchmarkClass) {
+        runAndReport(benchmarkClass, WARMUP_ITERATIONS, MEASUREMENT_ITERATIONS, Assertions.Disable);
     }
 
-    public static void devRun(Class clazz) {
-        runAndReport(clazz, QUICK_WARMUP_ITERATIONS, QUICK_MEASUREMENT_ITERATIONS, Assertions.Disable);
+    public static void devRun(Class benchmarkClass) {
+        runAndReport(benchmarkClass, QUICK_WARMUP_ITERATIONS, QUICK_MEASUREMENT_ITERATIONS, Assertions.Disable);
     }
 
-    public static void devRunWithAssertions(Class clazz) {
-        runAndReport(clazz, QUICK_WARMUP_ITERATIONS, QUICK_MEASUREMENT_ITERATIONS, Assertions.Enable);
+    public static void devRunWithAssertions(Class benchmarkClass) {
+        runAndReport(benchmarkClass, QUICK_WARMUP_ITERATIONS, QUICK_MEASUREMENT_ITERATIONS, Assertions.Enable);
     }
 
-    private static void runAndReport(Class clazz, int warmupIterations, int measurementIterations, Assertions assertions) {
-        Collection<RunResult> results = run(clazz, warmupIterations, measurementIterations, assertions);
+    private static void runAndReport(Class benchmarkClass, int warmUpIterations, int measurementIterations, Assertions assertions) {
+        Collection<RunResult> results = run(benchmarkClass, warmUpIterations, measurementIterations, assertions);
         BenchmarkPerformanceReporter.of(results).print();
     }
 
-    private static Collection<RunResult> run(Class clazz, int warmupIterations, int measurementIterations, Assertions assertions) {
+    private static Collection<RunResult> run(Class benchmarkClass, int warmUpIterations, int measurementIterations, Assertions assertions) {
         final Options opts = new OptionsBuilder()
-                .include(clazz.getSimpleName())
+                .include(benchmarkClass.getSimpleName())
                 .shouldDoGC(true)
                 .shouldFailOnError(true)
                 .mode(Mode.Throughput)
                 .timeUnit(TimeUnit.SECONDS)
                 .warmupTime(TimeValue.milliseconds(500))
-                .warmupIterations(warmupIterations)
+                .warmupIterations(warmUpIterations)
                 .measurementTime(TimeValue.milliseconds(500))
                 .measurementIterations(measurementIterations)
                 .forks(1)
                 // We are using 4Gb and setting NewGen to 100% to avoid GC during testing.
                 // Any GC during testing will destroy the iteration, which should get ignored as an outlier
                 .jvmArgsAppend("-XX:+UseG1GC", "-Xss100m", "-Xms4g", "-Xmx4g", "-XX:+PrintGC", "-XX:MaxGCPauseMillis=1000", "-XX:+UnlockExperimentalVMOptions", "-XX:G1NewSizePercent=100", "-XX:G1MaxNewSizePercent=100", assertions.vmArg)
-//                .jvmArgsAppend("-XX:+UseG1GC", "-Xss100m", "-Xms4g", "-Xmx4g", "-XX:+PrintGC", assertions.vmArg)
                 .build();
 
         try {
